# coreLP

./: .gitignore  README.md  pyproject.toml  pythonLP.code-workspace
.ai/: structure.md
.dev/: README.md  (+9 more)
devLP/: pyproject.toml
devLP/.libs_links/coreLP/: add_module.lnk  add_script.lnk  upload_newversion.lnk
devLP/_templates/: batauto_bat.txt  icon_pythonLP.txt  lib_batadddependency.txt  lib_batmajor.txt  lib_batminor.txt  lib_batmodule.txt  lib_batscript.txt  lib_batversion.txt  lib_docaddclass.rst  lib_docaddfunction.rst  lib_docaddscript.rst  lib_docbeginner.rst  lib_docconf.txt  lib_docindex.rst  lib_docinstall.rst  lib_docmodules.rst  lib_docquicky.rst  lib_docreferences.rst  lib_docscripts.rst  lib_docuser.rst  lib_docwhatis.rst  lib_gitignore.txt  lib_init.txt  lib_module.txt  lib_pyadddependency.txt  lib_pymodule.txt  lib_pyscript.txt  lib_pyversion.txt  lib_readme.md  lib_readme.txt  lib_script.txt  lib_test.txt  pyauto_bat.txt  pyauto_py.txt
devLP/src/devlp/: __init__.py
devLP/src/devlp/clear_notebooks_LP/: clear_notebooks.bat  clear_notebooks.py  icon.txt
devLP/src/devlp/close_windows_LP/: close_windows.bat  icon.txt
devLP/src/devlp/create_batauto_LP/: create_batauto.bat  create_batauto.py  icon.txt
devLP/src/devlp/create_pyauto_LP/: create_pyauto.bat  create_pyauto.py  icon.txt
devLP/src/devlp/get_icon_LP/: get_icon.bat  get_icon.py  icon.txt
devLP/src/devlp/git_pull_LP/: git_pull.bat  git_pull.py  icon.txt
devLP/src/devlp/git_push_LP/: git_push.bat  git_push.py  icon.txt
devLP/src/devlp/good_morning_LP/: good_morning.bat  icon.txt
devLP/src/devlp/good_night_LP/: good_night.bat  icon.txt
devLP/src/devlp/install_pythonLP_LP/: icon.txt  install_pythonLP.bat
devLP/src/devlp/make_desktopini_LP/: icon.txt  make_desktopini.bat  make_desktopini.py
devLP/src/devlp/make_shortcuts_LP/: icon.txt  make_shortcuts.bat  make_shortcuts.py
devLP/src/devlp/make_symlink_LP/: icon.txt  make_symlink.bat  make_symlink.py
devLP/src/devlp/new_lib_LP/: icon.txt  new_lib.bat  new_lib.py
devLP/src/devlp/new_script_LP/: icon.txt  new_script.bat  new_script.py
devLP/src/devlp/open_debug_LP/: icon.txt  open_debug.bat
devLP/src/devlp/open_liblinks_LP/: icon.txt  open_liblinks.bat
devLP/src/devlp/open_links_LP/: icon.txt  open_links.bat
devLP/src/devlp/open_pythonLP_LP/: open_pythonLP.bat
devLP/src/devlp/open_workspace_LP/: icon.txt  open_workspace.bat
devLP/src/devlp/reset_debug_LP/: icon.txt  reset_debug.bat  reset_debug.py
devLP/src/devlp/reset_env_LP/: reset_env.bat
devLP/src/devlp/start_explorer_LP/: icon.txt  start_explorer.bat
devLP/src/devlp/start_internet_LP/: icon.txt  start_internet.bat
devLP/src/devlp/start_pythonLP_LP/: icon.txt  start_pythonLP.bat
libsLP/coreLP/: README.md  pyproject.toml
libsLP/coreLP/.dev/: add_module.bat  add_module.py  add_script.bat  add_script.py
libsLP/coreLP/src/corelp/: __init__.py  modules.json
libsLP/coreLP/src/corelp/modules/: template_module.txt
libsLP/coreLP/src/corelp/modules/print_LP/: print.py
libsLP/coreLP/src/corelp/scripts/: template_script.txt
libsLP/pyLP/: .gitignore  README.md  pyproject.toml
libsLP/pyLP/scripts/print_file_LP/: print_file.py
libsLP/pyLP/src/pylp/: __init__.py  _template_module.txt  modules.json
libsLP/pyLP/src/pylp/print_LP/: print.py
(+70 files in other folders)
