[project]
name = "corelp"
version = "0.1.0"
description = "Gathers core functions for python programmation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
[[project.authors]]
name = "LancelotPincet"
email = "40608570+LancelotPincet@users.noreply.github.com"

[build-system]
requires = [ "uv_build>=0.8.8,<0.9.0",]
build-backend = "uv_build"
